# OpenNetlistView

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENCE  README.md  create-appimage.sh  docker-compose.yml  main.cpp  setup.sh
.devcontainer/: devcontainer.json
appdir/usr/share/applications/: OpenNetlistView.desktop
docker/: Dockerfile  docker-create-diag-image.sh
docs/: CMakeLists.txt
docs/cmake/: FindInkscape.cmake  FindSphinx.cmake
docs/user_guide/: conf.py
resources/examples/: adder.rtl.json  adder.tech.json  addersystem.rtl.json  examples.qrc
resources/icons/: ATTRIBUTIONS  icons.qrc
resources/symbols/: LICENSE  symbols.qrc
src/: CMakeLists.txt  dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogproperties.cpp  dialogproperties.h  dialogproperties.ui  dialogsearch.cpp  dialogsearch.h  dialogsearch.ui  dialogsettings.cpp  dialogsettings.h  dialogsettings.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  netlisttab.cpp  netlisttab.h  netlisttab.ui  qnetlistgraphicsellipse.cpp  qnetlistgraphicsellipse.h  qnetlistgraphicsnode.cpp  qnetlistgraphicsnode.h  qnetlistgraphicspath.cpp  qnetlistgraphicspath.h  qnetlistgraphicstext.cpp  qnetlistgraphicstext.h  qnetlistscene.cpp  qnetlistscene.h  qnetlistscidoublespin.cpp  qnetlistscidoublespin.h  qnetlisttabwidget.cpp  qnetlisttabwidget.h  qnetlistview.cpp  qnetlistview.h
src/routing/: CMakeLists.txt  avoid_router.cpp  avoid_router.h  cola_router.cpp  cola_router.h  router.cpp  router.h
src/symbol/: CMakeLists.txt  port.cpp  port.h  symbol.cpp  symbol.h  symbol_parser.cpp  symbol_parser.h
src/version/: CMakeLists.txt  version.cmake  version.cpp  version.h
src/yosys/: CMakeLists.txt  component.cpp  component.h  diagram.cpp  diagram.h  module.cpp  module.h  netname.cpp  netname.h  node.cpp  node.h  parser.cpp  parser.h  path.cpp  path.h  port.cpp  port.h
test/: CMakeLists.txt  tst_mainwindow.cpp  tst_routing.cpp  tst_yosys.cpp
test/data/mainwindow/: yosys_out.json
test/data/yosys/: test10.json  test11.json  test12.json  test13.json  test14.json  test15.json  test16.json  test17.json  test18.json  test19.json  test2.json  test20.json  test21.json  test22.json  test23.json  test24.json  test25.json  test26.json  test27.json  test28.json  test29.json  test3.json  test30.json  test31.json  test32.json  test33.json  test34.json  test35.json  test36.json  test37.json  test38.json  test39.json  test4.json  test5.json  test6.json  test7.json  test8.json  test9.json
